--- a/Templates/blog_detail.html
+++ b/Templates/blog_detail.html
@@ -7,6 +7,7 @@
 	<p>{{ blog.body }}</p>
 </div>
 
-<a href="{% url 'blog_edit' blog.pk %}">+ Edit Blog Post</a>
+<p><a href="{% url 'blog_edit' blog.pk %}">+ Edit Blog Post</a></p>
+<p><a href="{% url 'blog_delete' blog.pk %}">+ Delete Blog Post</a></p>
 
 {% endblock content %}
