--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,12 @@
 			<a href="{% url 'blog_new' %}">+ New Blog Post</a>
 		</div>
 	</header>
+	{% if user.is_authenticated %}
+	<p>Hi {{ user.username }}!</p>
+	{% else %}
+	<p>You are not logged in.</p>
+	<a href="{% url 'login' %}">Log in</a>
+	{% endif %}
 	<div>
 		{% block content %}
 		{% endblock content %}
