--- a/templates/base.html
+++ b/templates/base.html
@@ -11,17 +11,21 @@
 		<div class="nav-left">
 			<h1><a href="{% url 'home' %}">Django Blog</a></h1>
 		</div>
+		{% if user.is_authenticated %}
 		<div class="nav-right">
-			<a href="{% url 'blog_new' %}">+ New Blog Post</a>
+			<p>Hi {{ user.username }}!</p>
+			<p> | <a href="{% url 'logout' %}">Log out</a></p>
+			<p> | <a href="{% url 'blog_new' %}"> New Blog Post</a></p>
 		</div>
+		{% else %}
+		<div class="nav-right">
+			<p>
+				<a href="{% url 'login' %}">Log in</a> | 
+				<a href="{% url 'signup' %}">Sign Up</a>
+			</p>
+		</div>
+		{% endif %}
 	</header>
-	{% if user.is_authenticated %}
-	<p>Hi {{ user.username }}!</p>
-	<p><a href="{% url 'logout' %}">Log out</a></p>
-	{% else %}
-	<p>You are not logged in.</p>
-	<a href="{% url 'login' %}">Log in</a>
-	{% endif %}
 	<div>
 		{% block content %}
 		{% endblock content %}
